cmake_minimum_required(VERSION 3.15)
project(NewProject)

set(CMAKE_CXX_STANDARD 14)

add_executable(NewProject main.cpp soom.cpp cmake-build-debug/2206.cpp sam2382.cpp kakao.cpp BinarySearch.cpp LinkedList.c InsertionSort.cpp bead.cpp brokeWall.cpp fibonaci.cpp wave.cpp RGB.cpp triangle.cpp stairs.cpp encrypt.cpp codingtest1.cpp codingtest2.cpp stack.cpp queue.cpp quicksort.cpp baek15649.cpp baek15649new.cpp)